[gd_scene load_steps=29 format=3 uid="uid://xp0xq82lak0q"]

[ext_resource type="Texture2D" uid="uid://416qrfnn8ck7" path="res://Assets/Map/zelda_futuristic_asset_pack/map/tileset.png" id="2_f2pel"]
[ext_resource type="PackedScene" uid="uid://xv6iws8v6etk" path="res://menu/Options/options_menu.tscn" id="2_pn0hl"]
[ext_resource type="PackedScene" uid="uid://dlgaubofwx2f6" path="res://player/player.tscn" id="2_xvqho"]
[ext_resource type="Texture2D" uid="uid://daf4jyqa5kaa1" path="res://Assets/Map/zelda_futuristic_asset_pack/map/tileset_top.png" id="3_km6ra"]
[ext_resource type="Texture2D" uid="uid://by454lcda0y2k" path="res://Assets/Map/zelda_futuristic_asset_pack/map/objects/server.png" id="4_eqgt8"]
[ext_resource type="Texture2D" uid="uid://bsqcxhfveyrfn" path="res://Assets/Map/zelda_futuristic_asset_pack/map/key/key0.png" id="5_oc7mk"]
[ext_resource type="Texture2D" uid="uid://dgsp5rsty3r7k" path="res://Assets/Map/zelda_futuristic_asset_pack/fx/light_blue.png" id="6_j475w"]
[ext_resource type="Texture2D" uid="uid://ciq3fhjg6ykyk" path="res://Assets/Map/zelda_futuristic_asset_pack/fx/light_red_v2.png" id="7_t0l8w"]
[ext_resource type="Texture2D" uid="uid://ypknbtosda73" path="res://Assets/Map/zelda_futuristic_asset_pack/fx/light_blue_v2.png" id="8_3g21u"]
[ext_resource type="Script" path="res://menu/StartDoor.gd" id="9_bd2vw"]
[ext_resource type="Script" path="res://menu/MapHitBoxes.gd" id="9_hn1v2"]
[ext_resource type="Script" path="res://menu/ExitDoor.gd" id="10_pu83f"]
[ext_resource type="FontFile" uid="uid://de33bafuqfbcr" path="res://Assets/TextFont/m3x6.ttf" id="10_ux386"]
[ext_resource type="Script" path="res://menu/OptionPannel.gd" id="11_8ghdp"]
[ext_resource type="AudioStream" uid="uid://b6sjseluvwl1x" path="res://Assets/Musics/Ambient/[NO COPYRIGHT]Ambient-SciFi.mp3" id="13_u0kga"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6an7p"]
texture = ExtResource("2_f2pel")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aj38o"]
texture = ExtResource("3_km6ra")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
7:5/0 = 0
0:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r582a"]
texture = ExtResource("4_eqgt8")
texture_region_size = Vector2i(16, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5cron"]
texture = ExtResource("5_oc7mk")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n3yom"]
texture = ExtResource("6_j475w")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_iu136"]
texture = ExtResource("7_t0l8w")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6trp2"]
texture = ExtResource("8_3g21u")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0

[sub_resource type="TileSet" id="TileSet_vju8f"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_6an7p")
sources/1 = SubResource("TileSetAtlasSource_aj38o")
sources/2 = SubResource("TileSetAtlasSource_r582a")
sources/3 = SubResource("TileSetAtlasSource_5cron")
sources/4 = SubResource("TileSetAtlasSource_n3yom")
sources/5 = SubResource("TileSetAtlasSource_iu136")
sources/6 = SubResource("TileSetAtlasSource_6trp2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_77hx1"]
size = Vector2(39, 8.5)

[sub_resource type="Theme" id="Theme_1xjh8"]
default_font = ExtResource("10_ux386")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pr3pu"]
size = Vector2(32, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s13kk"]
size = Vector2(42, 9)

[sub_resource type="Theme" id="Theme_crtw2"]
default_font = ExtResource("10_ux386")
default_font_size = 16

[node name="MainMenu" type="Node2D"]

[node name="Character" parent="." instance=ExtResource("2_xvqho")]
position = Vector2(21, 37)

[node name="CharacterCamera" type="Camera2D" parent="Character"]
zoom = Vector2(2.5, 2.5)
limit_left = -2566
limit_top = -2339
limit_right = 4766
limit_bottom = 2300

[node name="OptionsMenu" parent="Character/CharacterCamera" instance=ExtResource("2_pn0hl")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -150.0
offset_right = 225.0
offset_bottom = 150.0

[node name="Map" type="TileMap" parent="."]
tile_set = SubResource("TileSet_vju8f")
rendering_quadrant_size = 32
format = 2
layer_0/name = "ground"
layer_0/z_index = -2
layer_0/tile_data = PackedInt32Array(-196608, 0, 7, -131073, 0, 7, -131074, 0, 7, -131076, 0, 7, -65540, 0, 7, -4, 0, 7, 65532, 0, 7, 131068, 0, 7, 196604, 0, 7, 262140, 0, 7, 262141, 0, 7, 262142, 0, 7, 262143, 0, 7, 196608, 0, 7, 196609, 0, 7, 196610, 0, 7, 196611, 0, 7, 131075, 0, 7, 65539, 0, 7, 3, 0, 7, -65533, 0, 7, -131069, 0, 7, -196605, 0, 7, -196606, 0, 7, -196607, 0, 7, -196610, 0, 7, -196611, 0, 7, -131075, 0, 7, -65539, 0, 7, -3, 0, 7, 65533, 0, 7, 131069, 0, 7, 196605, 0, 7, 196606, 0, 7, 196607, 0, 7, 131072, 0, 7, 131073, 0, 7, 131074, 0, 7, 65538, 0, 7, 2, 0, 7, -65534, 0, 7, -131070, 0, 7, -131071, 0, 7, -131072, 0, 7, -65537, 0, 7, -65538, 0, 7, -2, 0, 7, 65534, 0, 7, 131070, 0, 7, 131071, 0, 7, 65536, 0, 7, 65537, 0, 7, 1, 0, 7, -65535, 0, 7, -65536, 0, 7, -196612, 0, 7, -196613, 0, 7, -131077, 0, 7, -65541, 0, 7, -5, 0, 7, 65531, 0, 7, 131067, 0, 7, 196603, 0, 7, 262139, 0, 7, 327675, 0, 7, 327676, 0, 7, 327677, 0, 7, 327678, 0, 7, 327679, 0, 7, 262144, 0, 7, 262145, 0, 7, 262146, 0, 7, 262147, 0, 7, 262148, 0, 7, 196612, 0, 7, 131076, 0, 7, 65540, 0, 7, 4, 0, 7, -65532, 0, 7, -131068, 0, 7, -196604, 0, 7, -262140, 0, 7, -262141, 0, 7, -262142, 0, 7, -262143, 0, 7, -262144, 0, 7, -196609, 0, 7, 65535, 0, 7, 0, 0, 7, -1, 0, 7, -262139, 0, 7, -196603, 0, 7, -131067, 0, 7, -65531, 0, 7, 5, 0, 7, 65541, 0, 7, 131077, 0, 7, 196613, 0, 7, 262149, 0, 7)
layer_1/name = "walls"
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array(-262150, 0, 3, -262149, 65536, 3, -262148, 393216, 4, -262147, 65536, 3, -262146, 65536, 3, -262145, 65536, 3, -327680, 65536, 3, -327679, 65536, 3, -327678, 65536, 3, -327677, 65536, 3, -327676, 393216, 4, -196614, 0, 4, -131078, 0, 4, -65542, 0, 4, -6, 0, 4, 65530, 0, 4, 131066, 0, 4, 196602, 0, 4, 262138, 0, 4, 327674, 0, 4, 393210, 0, 5, 393211, 65536, 5, 393212, 65536, 5, 393213, 65536, 5, 393214, 65536, 5, 393215, 65536, 5, 327680, 65536, 5, 327681, 65536, 5, 327682, 65536, 5, 327683, 65536, 5, 327684, 65536, 5, 65542, 131072, 4, 6, 131072, 4, 131078, 131072, 4, 196614, 131072, 4, 262150, 131072, 4, -262138, 131072, 4, -196602, 131072, 4, -131066, 131072, 4, -65530, 131072, 4, 327686, 131072, 5, 327685, 65536, 5, -327674, 131072, 3, -327675, 65536, 3)
layer_2/name = "elements"
layer_2/z_index = -1
layer_2/tile_data = PackedInt32Array(-262149, 1, 0, -262148, 65537, 0, -262147, 131073, 0, -327677, 1, 0, -327676, 65537, 0, -262145, 131073, 7, -262146, 65537, 7, -65542, 458753, 6, -6, 458753, 6, 65530, 458753, 6, 131066, 458753, 6, 393215, 131073, 7, 327680, 131073, 7, 393214, 131073, 7, 393213, 65537, 7, 327681, 131073, 7, -262143, 2, 0, -262144, 3, 0, -327675, 131073, 0, -327680, 131073, 7, -327679, 131073, 7, -327678, 196609, 7, -196609, 2, 0, 196602, 458753, 6, -131066, 458753, 6, -65530, 458753, 6, 6, 458753, 6, 65542, 458753, 6, 131078, 458753, 6, -131078, 458753, 5, -196602, 458753, 5, 262138, 458753, 7, 196614, 458753, 7, 327683, 196609, 7, 327682, 131073, 7)
layer_3/name = "doors"
layer_3/tile_data = PackedInt32Array(-327677, 1, 0, -327675, 131073, 0, -327676, 65537, 0, -262148, 65537, 0, -262149, 1, 0, -262147, 131073, 0)

[node name="MapHitBoxes" type="StaticBody2D" parent="Map"]
collision_layer = 2
collision_mask = 12
script = ExtResource("9_hn1v2")

[node name="Walls" type="CollisionPolygon2D" parent="Map/MapHitBoxes"]
polygon = PackedVector2Array(-163, -128, -127, -129, -133, -150, -93, -150, -96, -128, -38.9752, -128.511, 127, -130, 122, -150, 161, -152, 161, -131, 193, -130, 193, 160, -161, 160, -161, -121, -196, -164, -198, 194, 242, 197, 235, -170, -194, -165, -164, -125)

[node name="OptionPanel" type="CollisionPolygon2D" parent="Map/MapHitBoxes"]
polygon = PackedVector2Array(-27, -127, -26, -94, -6, -93, -2, -111, 37, -111, 40, -94, 59, -94, 59, -128)

[node name="StartDoor" type="Area2D" parent="Map"]
collision_layer = 2
collision_mask = 4
script = ExtResource("9_bd2vw")

[node name="StartBox" type="CollisionShape2D" parent="Map/StartDoor"]
position = Vector2(143, -150)
shape = SubResource("RectangleShape2D_77hx1")

[node name="StartText" type="Label" parent="Map/StartDoor/StartBox"]
offset_left = -18.0
offset_right = 18.0
offset_bottom = 14.0
theme = SubResource("Theme_1xjh8")
text = "START
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitDoor" type="Area2D" parent="Map"]
collision_layer = 2
collision_mask = 4
script = ExtResource("10_pu83f")

[node name="ExitBox" type="CollisionShape2D" parent="Map/ExitDoor"]
position = Vector2(-114, -150)
shape = SubResource("RectangleShape2D_pr3pu")

[node name="ExitText" type="Label" parent="Map/ExitDoor/ExitBox"]
offset_left = -17.0
offset_right = 19.0
offset_bottom = 14.0
theme = SubResource("Theme_1xjh8")
text = "EXIT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionPannel" type="Area2D" parent="Map"]
collision_layer = 2
collision_mask = 4
script = ExtResource("11_8ghdp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map/OptionPannel"]
position = Vector2(17, -106.5)
shape = SubResource("RectangleShape2D_s13kk")

[node name="OptionText" type="Label" parent="Map/OptionPannel/CollisionShape2D"]
modulate = Color(1, 1, 1, 0.607843)
z_index = -1
offset_left = -14.0
offset_top = 4.0
offset_right = 14.0
offset_bottom = 33.0
theme = SubResource("Theme_crtw2")
text = "OPTIONS
(F)"
horizontal_alignment = 1

[node name="WelcomeText" type="Label" parent="Map"]
z_index = -1
offset_left = -95.0
offset_top = -82.0
offset_right = 134.0
offset_bottom = 99.0
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 0.592157)
theme_override_fonts/font = ExtResource("10_ux386")
theme_override_font_sizes/font_size = 64
text = "WELCOME
TO
MANAUPEN"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_u0kga")
autoplay = true

[connection signal="exit_options_menu" from="Character/CharacterCamera/OptionsMenu" to="Map/OptionPannel" method="_on_options_menu_exit_options_menu"]
[connection signal="body_entered" from="Map/StartDoor" to="Map/StartDoor" method="_on_body_entered"]
[connection signal="body_entered" from="Map/ExitDoor" to="Map/ExitDoor" method="_on_body_entered"]
[connection signal="body_entered" from="Map/OptionPannel" to="Map/OptionPannel" method="_on_body_entered"]
[connection signal="body_exited" from="Map/OptionPannel" to="Map/OptionPannel" method="_on_body_exited"]
